import "steammessages_base.proto";
import "steammessages_unified_base.steamclient.proto";
import "enums.proto";
import "steammessages_auth.steamclient.proto";

option cc_generic_services = true;

message CAuthentication_BeginAuthSessionViaCredentials_Request_BinaryGuardData {
  optional string device_friendly_name = 1;
  optional string account_name = 2;
  optional string encrypted_password = 3 [(description) = "password, RSA encrypted client side"];
  optional uint64 encryption_timestamp = 4 [(description) = "timestamp to map to a key - STime"];
  optional bool remember_login = 5 [(description) = "deprecated"];
  optional .EAuthTokenPlatformType platform_type = 6 [default = k_EAuthTokenPlatformType_Unknown];
  optional .ESessionPersistence persistence = 7 [default = k_ESessionPersistence_Persistent, (description) = "whether we are requesting a persistent or an ephemeral session"];
  optional string website_id = 8 [default = "Unknown", (description) = "(EMachineAuthWebDomain) identifier of client requesting auth"];
  optional .CAuthentication_DeviceDetails device_details = 9 [(description) = "User-supplied details about the device attempting to sign in"];
  optional bytes guard_data = 10 [(description) = "steam guard data for client login"];
  optional uint32 language = 11;
  optional int32 qos_level = 12 [default = 2, (description) = "[ENetQOSLevel] client-specified priority for this auth attempt"];
}
